# oh-my-wiki

./: .gitignore  LICENSE  README.md  pyproject.toml
oh_my_wiki/: __init__.py  __main__.py  analyze.py  article.py  cache.py  compile.py  detect.py  extract.py  index.py  ingest.py  install.py  manifest.py  query.py  security.py  skill.md  watch.py
spec/: 00_vision.md  01_architecture.md  02_data_model.md  03_cli.md  04_compilation.md  05_query_lint_analyze.md  06_skill_orchestration.md  07_implementation.md  08_edge_cases.md  09_branding.md  10_clawpy_integration.md  INDEX.md
tests/: test_analyze.py  test_article.py  test_cache.py  test_compile.py  test_detect.py  test_extract.py  test_index.py  test_install.py  test_query.py
worked/nested-learning/: .gitignore
worked/nested-learning/.omw/: extractions.json  manifest.json
worked/nested-learning/raw/: arxiv_1712_03781.md  arxiv_2511_14823.md  arxiv_2512_24695.md  arxiviq_substack_com_p_nested-learning-the-illusion-of-deep.md  continual-learning-background.md  itcanthink_substack_com_p_paper-notes-nested-learning.md  research-notes.md  research_google_blog_introducing-nested-learning-a-new-ml-paradigm-for-continual.md  www_marktechpost_com_2025_11_08_nested-learning-a-new-machine-learning-approach-.md
worked/nested-learning/wiki/: WIKI_REPORT.md  ali-behrouz.md  catastrophic-forgetting-and-continual-learning.md  continuum-memory-system.md  deep-momentum-gradient-descent.md  dynamic-nested-hierarchies.md  hope-architecture.md  index.md  nested-learning.md  nestednet.md  open-questions-in-nested-learning.md  (+3 more)
(+4 files in other folders)
